updated comment for clarity

--- a/cookbooks/bash/files/default/README
+++ b/cookbooks/bash/files/default/README
@@ -1,5 +1,5 @@
 ################################################################################
-### This file installed by bootstrap. If you run bootstrap again, you'll lose
+### This file installed by Chef. If you run bootstrap again, you'll lose
 ### any changes made here.
 ################################################################################
 #
